# DataDrill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RUST_MIGRATION_PLAN.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  delete-merged-branches.yml
docs/: api.md  index.md
python/src/datadrill/: __init__.py  dataframe.py  field.py
python/src/datadrill_rs/: __init__.py
reports/: cargo_test.txt  maturin_build.txt  mkdocs-build.txt  poetry_install.txt  pre-commit.txt  precommit.txt  pytest.txt
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: integration.rs
src/datadrill/: __init__.py  core.py  field.py
tests/: test_bindings.py  test_content.py  test_core.py  test_dataframe.py  test_dump.py  test_field_function.py  test_fields.py  test_map.py  test_reader_extras.py
