[package]
name = "datadrill"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
authors = ["Codex <codex@openai.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
polars = { version = "0.48.1", default-features = false, features = ["lazy", "dtype-decimal", "round_series"] }
pyo3 = { version = "0.24.2", features = ["extension-module"], optional = true }
pyo3-polars = { version = "0.21.0", default-features = false, features = ["lazy"], optional = true }

[features]
pybindings = ["pyo3", "pyo3-polars"]
